fixed the overlapping problem and added the break for smaller screens

--- a/floats.css
+++ b/floats.css
@@ -5,6 +5,11 @@ header {
     margin: auto;
     background-color: yellow;
 }
+#middle {
+    position: fixed;
+    background-color: blue;
+    width: 100%;
+}
 
 nav {
     width: 33.33%;
@@ -20,6 +25,7 @@ main {
     margin: auto;
     background-color: blue;
     font-size: 1vw;
+    overflow: visible;
 }
 
 aside {
@@ -30,19 +36,13 @@ aside {
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
+    float: left;
+    margin: auto;
     background-color: red;
     color: white;
     text-align: center;
     font-size: 5vw;
-}
-
-body {
-    background-color: blue;
-    width: 100%;
 }
 
 h1 {
@@ -58,4 +58,38 @@ a {
 p {
     color: cornsilk;
     font-size: 3vw;
+}
+
+body {
+    width: 100%;
+    background-color: blue;
+}
+
+
+@media only screen and (max-width: 480px) {
+  /* for smaller screens*/
+  nav {
+    width: 100%;
+    float: left;
+    margin: auto;
+    background-color: blue;
+    font-size: 1vw;
+}
+
+main {
+    width: 100%;
+    float: left;
+    margin: auto;
+    background-color: blue;
+    font-size: 1vw;
+    overflow: auto;
+}
+
+aside {
+    width: 100%;
+    float: left;
+    margin: auto;
+    background-color: blue;
+}
+  
 }
